# word-selection-assistant

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONFIG_GUIDE.md  QWEN.md  README.md  main.py  pyproject.toml  requirements.txt  test_ollama.py
ai/: __init__.py  iflow_adapter.py  iflow_integration.py  iflow_workflow.py  ollama_adapter.py  openai_compatible.py  prompt_generator.py  xiaoma_adapter.py
config/: prompt_templates.yaml  settings.yaml
core/: __init__.py  function_router.py  hotkey_manager.py  text_capture.py
features/: __init__.py  chart_generator.py  custom_builder.py  explainer.py  ocr_handler.py  prompt_optimizer.py  question_asker.py  summarizer.py  translator.py  vision_explainer.py
tests/: __init__.py
ui/: __init__.py  popup_window.py  settings_dialog.py  tray_icon.py
utils/: __init__.py  chart_code_executor.py  chart_dependency_manager.py  config_loader.py  config_manager.py  event_loop_manager.py  local_cache.py  logger.py  settings_manager.py  stream_handler.py  theme_manager.py  thread_pool_manager.py
